Fix a problem that prevent successful build on Java 11; remove warnings